Use explicit locale and charset in security-utils module
Replace implicit locale and charset usage to avoid platform-dependent
behavior:
- Add Locale.ROOT to String.format() calls for locale-independent formatting
- Replace .formatted() with String.format(Locale.ROOT, ...)
- Add StandardCharsets.UTF_8 for explicit charset when converting bytes to strings